pk: Allow the user to repair the system after a faulty offline update

BUG: 401426